force-app/main/default/objects/LeadLogDetail__c/LeadLogDetail__c.object-meta.xml
<CustomObject>
    <label>LeadLogDetail</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>LeadLogDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LeadLogDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>