force-app/main/default/objects/LeadLogDetail__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>