force-app/main/default/objects/LeadLogDetail__c/fields/Lead_Valid__c.field-meta.xml
<CustomField>
    <fullName>Lead_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Valid</label>
    <type>Checkbox</type>
</CustomField>