force-app/main/default/objects/LeadLogDetail__c/fields/Parrent__c.field-meta.xml
<CustomField>
    <fullName>Parrent__c</fullName>
    <label>Parrent</label>
    <referenceTo>LeadLogHeader__c</referenceTo>
    <relationshipLabel>LeadLogDetails</relationshipLabel>
    <relationshipName>LeadLogDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>