force-app/main/default/objects/LeadLogDetail__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Success</label>
    <length>10</length>
    <type>Text</type>
</CustomField>